--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link rel="manifest" href="/manifest.json">
+
 	<script async src="https://www.testdomainname.xyz/widget/widget.js" data-id="r4-widget-connection"></script>
 </head>
 <body>
